--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -5,7 +5,7 @@ schema_version = "1.0.0"
 id = "family_addon"
 version = "3.4.0"
 name = "Family"
-tagline = "An addon for Blender with select, duplicate and delete operations in hierarchy"
+tagline = "Select, duplicate and delete objects in hierarchy"
 maintainer = "Cunarist <cunarist@gmail.com>"
 # Supported types: "add-on", "theme"
 type = "add-on"
