--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "family"
 version = "3.4.0"
-description = "An addon for Blender with select, duplicate and delete operations in hierarchy"
+description = "Select, duplicate and delete objects in hierarchy"
 authors = ["Cunarist <cunarist@gmail.com>"]
 license = "GPL"
 readme = "README.md"
