Clarify the app name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "family"
 version = "3.4.0"
-description = "Select, duplicate and delete objects in hierarchy"
+description = "Select, duplicate and delete objects in hierarchy in Blender"
 authors = ["Cunarist <cunarist@gmail.com>"]
 license = "GPL"
 readme = "README.md"
