--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -2,7 +2,7 @@ schema_version = "1.0.0"
 
 # Example of manifest file for a Blender extension
 # Change the values according to your extension
-id = "family_addon"
+id = "family"
 version = "3.4.0"
 name = "Family"
 tagline = "Select, duplicate and delete objects in hierarchy"
