--- a/addon/blender_manifest.toml
+++ b/addon/blender_manifest.toml
@@ -3,9 +3,9 @@ schema_version = "1.0.0"
 # Example of manifest file for a Blender extension
 # Change the values according to your extension
 id = "family"
-version = "3.4.1"
+version = "3.4.2"
 name = "Family"
-tagline = "Select, duplicate and delete objects in hierarchy"
+tagline = "Duplicate and delete objects in hierarchy"
 maintainer = "Cunarist <cunarist@gmail.com>"
 # Supported types: "add-on", "theme"
 type = "add-on"
